--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>hero banner</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
@@ -15,7 +15,7 @@
       <header class="banner-content">
         <h1>Giant space moths invade Earth</h1>
         <p>Our friendly giant, nuclear radiated lizard steps up to battle against the nefarious space moths</p>
-      </header> 
+      </header>
     </article>
   </div>
 </body>
